--- a/pom.xml
+++ b/pom.xml
@@ -1324,7 +1324,7 @@
                   <link>http://download.oracle.com/javase/6/docs/api/</link>
                 </links>
                 <bottom>
-                  <![CDATA[Copyright &#169; {currentYear} <a href="http://www.cask.co">Cask Inc.</a>. <a href="http://www.apache.org/licenses/LICENSE-2.0">Licensed under the Apache License, Version 2.0</a>.]]>
+                  <![CDATA[Copyright &#169; {currentYear} <a href="http://cask.co">Cask Inc.</a> Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.]]>
                 </bottom>
               </configuration>
               <executions>
@@ -1527,7 +1527,7 @@
                 </goals>
                 <configuration>
                   <name>package.version</name>
-                  <value>$\{project.version}</value>
+                  <value>${project.version}</value>
                   <regex>-SNAPSHOT</regex>
                   <replacement>.${package.build.timestamp}</replacement>
                   <failIfNoMatch>false</failIfNoMatch>
@@ -1780,10 +1780,10 @@
                     <executable>fpm</executable>
                     <commandlineArgs>
                       --name "cdap-${project.artifactId}"
-                      --vendor "Cask Inc."
+                      --vendor "Cask, Inc."
                       --maintainer "support@cask.co"
                       --license "Copyright ${package.build.year} Cask, Inc. Licensed under the Apache License, Version 2.0."
-                      --description "Component of Cask CDAP"
+                      --description "Component of Cask DAP"
                       --category misc
                       -s dir
                       -t rpm
@@ -1791,7 +1791,7 @@
                       --directories "/opt/cdap/${project.artifactId}"
                       --version "${package.version}"
                       --architecture all
-                      --url "http://www.cask.co"
+                      --url "http://cask.co"
                       --template-value "project=${project.artifactId}"
                       --after-install "${project.parent.basedir}/distributions/src/rpm/scripts/postinst"
                       --before-remove "${project.parent.basedir}/distributions/src/rpm/scripts/prerm"
@@ -1831,10 +1831,10 @@
                     <executable>fpm</executable>
                     <commandlineArgs>
                       --name "cdap-${project.artifactId}"
-                      --vendor "Cask Inc."
+                      --vendor "Cask, Inc."
                       --maintainer "support@cask.co"
-                      --license "Copyright ${package.build.year} Cask,Inc. Licensed under the Apache License, Version 2.0."
-                      --description "Component of Cask CDAP"
+                      --license "Copyright ${package.build.year} Cask, Inc. Licensed under the Apache License, Version 2.0."
+                      --description "Component of Cask DAP"
                       --category misc
                       -s dir
                       -t deb
@@ -1928,7 +1928,7 @@
             <link>http://download.oracle.com/javase/6/docs/api/</link>
           </links>
           <bottom>
-            <![CDATA[Copyright &#169; {currentYear} <a href="http://www.cask.co">Cask Inc.</a>. <a href="http://www.apache.org/licenses/LICENSE-2.0">Licensed under the Apache License, Version 2.0</a>.]]>
+            <![CDATA[Copyright &#169; {currentYear} <a href="http://cask.co">Cask Inc.</a> Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.]]>
           </bottom>
         </configuration>
         <reportSets>
