--- a/pom.xml
+++ b/pom.xml
@@ -33,24 +33,16 @@
 
   <repositories>
     <repository>
-      <id>apache.snapshots</id>
-      <url>https://repository.apache.org/content/repositories/snapshots</url>
-    </repository>
-    <repository>
       <id>continuuity-public</id>
       <url>https://repository.continuuity.com/content/repositories/public</url>
     </repository>
     <repository>
-      <id>smartifacts</id>
-      <url>https://repository.continuuity.com/content/repositories/smartifacts</url>
+      <id>apache.snapshots</id>
+      <url>https://repository.apache.org/content/repositories/snapshots</url>
     </repository>
     <repository>
       <id>sonatype</id>
       <url>https://oss.sonatype.org/content/groups/public/</url>
-    </repository>
-    <repository>
-      <id>continuuity</id>
-      <url>https://repository.continuuity.com/content/repositories/snapshots</url>
     </repository>
   </repositories>
 
@@ -65,8 +57,8 @@
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <site>
-      <id>continuuity</id>
-      <url>http://continuuity.com</url>
+      <id>cask</id>
+      <url>http://cask.co</url>
     </site>
   </distributionManagement>
 
