--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
       <name>Cask Data</name>
       <email>cask-dev@googlegroups.com</email>
       <organization>Cask Data, Inc</organization>
-      <organizationUrl>https://github.com/caskco/cdap</organizationUrl>
+      <organizationUrl>http://www.cdap.io</organizationUrl>
     </developer>
   </developers>
 
