--- a/cdap-examples/pom.xml
+++ b/cdap-examples/pom.xml
@@ -179,7 +179,7 @@
       <dependency>
         <groupId>co.cask.http</groupId>
         <artifactId>netty-http</artifactId>
-        <version>0.4.0-SNAPSHOT</version>
+        <version>0.4.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
