--- a/cdap-archetypes/cdap-app-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/cdap-archetypes/cdap-app-archetype/src/main/resources/archetype-resources/pom.xml
@@ -28,9 +28,10 @@
   <properties>
     <app.main.class>${package}.HelloWorld</app.main.class>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
     <cdap.version>2.5.0-SNAPSHOT</cdap.version>
     <slf4j.version>1.7.5</slf4j.version>
+    <guava.version>13.0.1</guava.version>
+    <junit.version>4.11</junit.version>
   </properties>
 
   <repositories>
@@ -66,13 +67,13 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>13.0.1</version>
+      <version>${guava.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
