--- a/pom.xml
+++ b/pom.xml
@@ -119,9 +119,10 @@
   </properties>
 
   <modules>
-    <module>cdap-common-unit-test</module>
     <module>cdap-api</module>
     <module>cdap-common</module>
+    <module>cdap-common-cli</module>
+    <module>cdap-common-unit-test</module>
     <module>cdap-watchdog-api</module>
     <module>cdap-kafka</module>
     <module>cdap-data-fabric</module>
