--- a/cdap-standalone/pom.xml
+++ b/cdap-standalone/pom.xml
@@ -208,6 +208,10 @@
                       <targetPath>LICENSES</targetPath>
                     </resource>
                     <resource>
+                      <directory>${project.parent.basedir}/cdap-docs/developer-guide/build-pdf</directory>
+                      <targetPath>docs</targetPath>
+                    </resource>
+                    <resource>
                       <directory>${project.parent.basedir}/cdap-distributions</directory>
                       <includes>
                         <include>VERSION</include>
@@ -386,6 +390,18 @@
                 <configuration>
                   <target>
                     <copy file="${project.build.directory}/examples/deploy_pom.xml" tofile="${stage.opt.dir}/examples/pom.xml" />
+                  </target>
+                </configuration>
+              </execution>
+              <execution>
+                <id>rename-rest-api-docs</id>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <move file="${stage.opt.dir}/docs/rest.pdf" tofile="${stage.opt.dir}/docs/REST-API-Reference-v${project.version}.pdf"/>
                   </target>
                 </configuration>
               </execution>
