--- a/cdap-client-tests/pom.xml
+++ b/cdap-client-tests/pom.xml
@@ -21,7 +21,7 @@ the License.
   <parent>
     <artifactId>cdap</artifactId>
     <groupId>co.cask.cdap</groupId>
-    <version>2.5.0-SNAPSHOT</version>
+    <version>2.5.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
