--- a/pom.xml
+++ b/pom.xml
@@ -1279,6 +1279,25 @@
             </execution>
           </executions>
         </plugin>
+
+        <!-- GPG signature -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>1.5</version>
+          <configuration>
+            <passphrase>${gpg.passphrase}</passphrase>
+            <useAgent>${gpg.useagent}</useAgent>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>sign</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
         <!-- Nexus deploy plugin -->
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
@@ -1324,6 +1343,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>2.8</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.5</version>
       </plugin>
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
