--- a/cdap-examples/pom.xml
+++ b/cdap-examples/pom.xml
@@ -48,6 +48,7 @@
 
   <properties>
     <hadoop.version>2.3.0</hadoop.version>
+    <netty.http.version>0.5.0</netty.http.version>
     <spark.core.version>1.1.0</spark.core.version>
     <power.pack.version>[2.0.0,)</power.pack.version>
   </properties>
@@ -180,7 +181,7 @@
       <dependency>
         <groupId>co.cask.http</groupId>
         <artifactId>netty-http</artifactId>
-        <version>0.4.1</version>
+        <version>${netty.http.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.commons</groupId>
