--- a/cdap-examples/pom.xml
+++ b/cdap-examples/pom.xml
@@ -126,7 +126,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.14.1</version>
         <configuration>
-          <argLine>-Xmx2048m</argLine>
+          <argLine>-Xmx2048m -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled</argLine>
         </configuration>
       </plugin>
       <plugin>
