--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,8 @@
     <guice.version>3.0</guice.version>
     <hadoop.version>2.3.0</hadoop.version>
     <hbase94.version>0.94.6.1.continuuity</hbase94.version>
-    <hbase96.version>0.96.0-hadoop2</hbase96.version>
+    <hbase96.version>0.96.2-hadoop2</hbase96.version>
+    <hbase98.version>0.98.6.1-hadoop2</hbase98.version>
     <hive.version>0.13.0</hive.version>
     <hsql.version>2.2.4</hsql.version>
     <http.component.version>4.2.5</http.component.version>
@@ -145,6 +146,7 @@
     <module>cdap-data-fabric-tests</module>
     <module>cdap-hbase-compat-0.94</module>
     <module>cdap-hbase-compat-0.96</module>
+    <module>cdap-hbase-compat-0.98</module>
     <module>cdap-watchdog</module>
     <module>cdap-watchdog-tests</module>
     <module>cdap-app-fabric</module>
@@ -231,6 +233,17 @@
       <dependency>
         <groupId>co.cask.tephra</groupId>
         <artifactId>tephra-hbase-compat-0.96</artifactId>
+        <version>${tephra.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>co.cask.tephra</groupId>
+        <artifactId>tephra-hbase-compat-0.98</artifactId>
         <version>${tephra.version}</version>
         <exclusions>
           <exclusion>
