--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,7 @@
     <module>cdap-standalone</module>
     <module>cdap-distributions</module>
     <module>cdap-archetypes</module>
+    <module>cdap-unit-test-standalone</module>
   </modules>
 
   <dependencyManagement>
