--- a/cdap-cli/pom.xml
+++ b/cdap-cli/pom.xml
@@ -62,6 +62,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
