--- a/cdap-examples/pom.xml
+++ b/cdap-examples/pom.xml
@@ -49,7 +49,6 @@
   <properties>
     <hadoop.version>2.3.0</hadoop.version>
     <netty.http.version>0.5.0</netty.http.version>
-    <spark.core.version>1.1.0</spark.core.version>
     <power.pack.version>[2.0.0,)</power.pack.version>
   </properties>
 
@@ -191,7 +190,7 @@
       <dependency> <!-- Spark dependency -->
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-core_2.10</artifactId>
-        <version>${spark.core.version}</version>
+        <version>${spark.version}</version>
         <scope>provided</scope>
         <exclusions>
           <exclusion>
